@startuml
' Titre du diagramme
title Modèle Physique de Données (MPD) - Serveur de Poker

' --- Paramètres d'affichage ---
hide circle
skinparam linetype ortho
skinparam table {
  BackgroundColor White
  BorderColor Black
}
skinparam arrow {
  Color Black
}

' --- Définition des Tables ---

' Table pour les utilisateurs (Joueurs et Admins)
entity "Joueurs" as T_JOUEURS {
  * **id_joueur** : INTEGER <<PK>> <<AI>>
  --
  * pseudo : VARCHAR(50) <<UNIQUE>>
  * mot_de_passe_hash : VARCHAR(255)
  * email : VARCHAR(100) <<UNIQUE>>
  * credit : DECIMAL(10, 2)
  * est_admin : BOOLEAN
  * date_creation : TIMESTAMP
}

' Table pour les tables de jeu physiques
entity "Tables" as T_TABLES {
  * **id_table** : INTEGER <<PK>> <<AI>>
  --
  * nom_table : VARCHAR(100)
  * nb_sieges_max : INTEGER
  * blind_initial : DECIMAL(10, 2)
}

' Table pour les parties qui ont lieu sur les tables
entity "Parties" as T_PARTIES {
  * **id_partie** : INTEGER <<PK>> <<AI>>
  --
  * id_table : INTEGER <<FK>>
  * date_debut : TIMESTAMP
  * date_fin : TIMESTAMP
  * statut_partie : VARCHAR(20) ' ex: "en_attente", "en_cours", "terminee"
  * pot_total : DECIMAL(10, 2)
  * cartes_communes : VARCHAR(20) ' Flop, Turn, River (ex: "AS,KD,5C,8S,JD")
}

' Table de jonction pour la relation N-M entre Joueurs et Parties
entity "Joueurs_Parties" as T_JOUEURS_PARTIES {
  * **id_joueur** : INTEGER <<PK>> <<FK>>
  * **id_partie** : INTEGER <<PK>> <<FK>>
  --
  * main_joueur : VARCHAR(10) ' ex: "AC,KH"
  * montant_mise_total : DECIMAL(10, 2)
  * numero_siege : INTEGER
  * statut_dans_la_partie : VARCHAR(20) ' ex: "actif", "couche", "all_in"
  * gain_perte : DECIMAL(10, 2)
  * combinaison_finale : VARCHAR(50) ' ex: "Full House"
}

' Table pour l'historique des transactions financières
entity "Transactions" as T_TRANSACTIONS {
  * **id_transaction** : INTEGER <<PK>> <<AI>>
  --
  * id_joueur : INTEGER <<FK>>
  * type_transaction : VARCHAR(50) ' ex: "depot", "retrait", "gain_partie"
  * montant : DECIMAL(10, 2)
  * date_transaction : TIMESTAMP
}
' Table des administrateurs 
entity "Administrateurs" as T_ADMINISTRATEURS {
  * **id_admin** : INTEGER <<PK>> <<AI>>
  --
  * nom_admin : VARCHAR(100)
  * mot_de_passe_hash : VARCHAR(255)
  * email : VARCHAR(100) <<UNIQUE>>
}

' --- Définition des Relations ---

' Un joueur peut avoir plusieurs transactions
T_JOUEURS ||--o{ T_TRANSACTIONS

'Admin et Transactions 
T_ADMINISTRATEURS ||--o{ T_TRANSACTIONS

' Une table de jeu peut accueillir plusieurs parties (dans le temps)
T_TABLES ||--o{ T_PARTIES

' Relation N-M entre Joueurs et Parties, via la table de jonction
T_JOUEURS }|--|| T_JOUEURS_PARTIES
T_PARTIES }|--|| T_JOUEURS_PARTIES

@enduml